--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -10,12 +10,16 @@
     <string name="act_menu_addSell">Dodaj sprzedaż</string>
     <string name="act_menu_viewHistory">Sprawdź historię sprzedaży</string>
 
+    <!-- AddHarvestActivity -->
     <string-array name="act_addHarvest_spinner">
         <item>Rzepak</item>
         <item>Akacja</item>
         <item>Lipa</item>
     </string-array>
-
     <string name="kgTextField">Ile kilogramów?</string>
     <string name="glassTextField">Ile słoików?</string>
+    <string name="kgSwitcher">Dodać kilogramy?</string>
+    <string name="glassSwitcher">Dodać słoiki?</string>
+    <string name="addHarvButton">Dodaj zbiór</string>
+    <!---End of AddHarvestActivity-->
 </resources>
