changed adding harvest to firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="kgSwitcher">Add Kilos?</string>
     <string name="glassSwitcher">Add Glasses?</string>
     <string name="addHarvButton">Add Harvest</string>
+    <string name="bigGlassSwitcher">Big Glasses?</string>
+    <string name="smallGlassSwitcher">Small Glasses?</string>
 <!---End of AddHarvestActivity-->
 </resources>
