--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -21,5 +21,7 @@
     <string name="kgSwitcher">Dodać kilogramy?</string>
     <string name="glassSwitcher">Dodać słoiki?</string>
     <string name="addHarvButton">Dodaj zbiór</string>
+    <string name="bigGlassSwitcher">Duże słoiki?</string>
+    <string name="smallGlassSwitcher">Małe słoiki?</string>
     <!---End of AddHarvestActivity-->
 </resources>
