--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Pszczółka Majusia</string>
     //MainScreen Strings
@@ -8,7 +9,7 @@
     <string name="act_menu_addHarvest">Add Harvest</string>
     <string name="act_menu_addSell">Add Sell</string>
     <string name="act_menu_viewHistory">View Sell History</string>
-<!-- AddHarvestActivity -->
+    <!-- AddHarvestActivity -->
     <string-array name="act_addHarvest_spinner">
         <item>Rzepak</item>
         <item>Akacja</item>
@@ -21,5 +22,24 @@
     <string name="addHarvButton">Add Harvest</string>
     <string name="bigGlassSwitcher">Big Glasses?</string>
     <string name="smallGlassSwitcher">Small Glasses?</string>
-<!---End of AddHarvestActivity-->
+    <string name="title_activity_tabbed_test">tabbedTest</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_3">Tab 3</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <!---End of AddHarvestActivity-->
+
+    <!--OrderActivity-->
+    <string name="act_order_whatToSell">What to Sell?</string>
+    <string name="act_order_canSell">You can sell:</string>
+    <string name="act_order_big_glasses_label">Big Glasses</string>
+    <string name="act_order_small_glasses_label">Small Glasses</string>
+    <string name="act_order_quantity">Quantity</string>
+    <string name="act_order_amount">Price</string>
+    <string name="act_order_currency">€</string>
+    <string name="act_order_switcher_custom_price">Custom price?</string>
+    <string name="act_order_customer_name">Customer name</string>
+    <string name="act_order_add_button">Add to Cart</string>
+    <!--End of OrderActivity-->
 </resources>
