Added Email sender after created order

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,16 @@
     <!--Fragment2Activity-->
     <string name="act_order_bill_summary">Summary: </string>
     <string name="act_order_bill_summary_currency">%1$d USD</string>
+    <string name="act_order_email_message">Witaj,\n\n
+    Dziękujemy za złożenie zamówienia w naszym sklepie.\n\n
+    Twoje zamówienie wygląda następująco:\n\n\n
+    Rodzaj miodu: \t%1$s\n
+    Ilość słoików: \t%2$s\n
+    Cena: \t%3$s\n\n
+    Całkowita cena do zapłaty to: %4$s\n\n
+    Zapraszamy ponownie do skorzystania z naszej oferty.\n\n
+    Pozdrawiamy\n
+    Zespół BeeCompany</string>
     <!--End of Fragment2Activity-->
 
     <string name="act_update_title">Order Edit</string>
